--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,15 @@ body {
     margin: 0    
 } 
 
+.ant-collapse {
+    min-height: 10vh
+}
+
 .view-wrapper, .graph {
     height: 100%;
-    min-height: 100vh
+    min-height: 90vh
+}
+
+tspan {
+    font-size: 50px;
 }
