--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,9 @@ body {
     margin: 0    
 } 
 
-.ant-collapse {
-    min-height: 10vh
-}
-
 .view-wrapper, .graph {
     height: 100%;
-    min-height: 90vh
+    min-height: calc(100vh - 48px)
 }
 
 tspan {
