--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
 
 .view-wrapper, .graph {
     height: 100%;
-    min-height: calc(100vh - 48px)
+    min-height: calc(100vh - 48px - 31px)
 }
 
 tspan {
